--- a/css/styles.css
+++ b/css/styles.css
@@ -25,3 +25,23 @@ blockquote {
   background-color: lightgrey;
   width: 35%;
 }
+
+body {
+  font-family: 'Arvo', serif;
+}
+
+.col-sm-5 {
+  background-color: rgba(166, 166, 166, 0.8);
+  color: white;
+  text-shadow: black -1px 1px;
+  margin-bottom: 10px;
+  width: 50%;
+
+}
+
+h3 {color: #333333;
+  text-align: center;
+}
+
+* {border: 1px solid black;
+}
